--- a/src/pages/de/index.astro
+++ b/src/pages/de/index.astro
@@ -78,7 +78,7 @@ function formatDate(dateStr: string): string {
           <a href="/images/profile.jpg" target="_blank" rel="noopener noreferrer" aria-label={`Hochaufloesendes Profilfoto von ${introData.name} oeffnen`}>
             <Image
               src={profileImage}
-              alt={`Profilfoto von ${introData.name}`}
+              alt={introData.name}
               width={234}
               height={234}
               class="profile-image"
