--- a/src/components/AudioPlaylistPlayer.astro
+++ b/src/components/AudioPlaylistPlayer.astro
@@ -1,8 +1,6 @@
 ---
 import audioPlaylistUrl from "../scripts/audio-playlist-player.ts?url";
----
 import Icon from "./Icon.astro";
-
 interface PlaylistItem {
   src: string;
   title: string;
@@ -14,7 +12,7 @@ interface Props {
   showPlaylist?: boolean;
 }
 
-const { items, defaultIndex = 0, showPlaylist = false } = Astro.props;
+const { items, defaultIndex = 0, showPlaylist = false } = Astro.props as Props;
 const initialItem = items?.[defaultIndex] ?? items?.[0];
 ---
 
